--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="dark">#1C1C1E</color>
     <color name="gray">#515151</color>
+    <color name="pink">#C464E5</color>
 </resources>
