--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,12 @@
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@drawable/hello</item>
     </style>
+
+    <style name="MyDatePicker" >
+        <!-- Text color -->
+        <item name="android:textColorPrimary">@color/white</item>
+        <!-- Divider color -->
+        <item name="colorControlNormal">#C464E5</item>
+    </style>
+
 </resources>
