--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,12 +3,139 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/dark"
     tools:context=".ProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/imgProf"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center|top"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="100dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/profileava"
+        app:shapeAppearanceOverlay="@style/imageProf" />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/nameProf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="..."
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:layout_gravity="center|top"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="100dp"
+        android:fontFamily="@font/opensans_regular"
+        tools:ignore="RtlCompat" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="1dp"
+        android:layout_height="150dp"
+        android:background="@color/gray"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="100dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Возраст"
+        android:textColor="#505050"
+        android:fontFamily="@font/opensans_regular"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="110dp"
+        android:layout_marginStart="50dp"
+        android:textSize="14sp"/>
+
+    <TextView
+        android:id="@+id/ageProf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="..."
+        android:textColor="@color/white"
+        android:fontFamily="@font/opensans_regular"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="130dp"
+        android:layout_marginStart="50dp"
+        android:textSize="18sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Рост"
+        android:textColor="#505050"
+        android:fontFamily="@font/opensans_regular"
+        android:layout_gravity="top|end"
+        android:layout_marginTop="110dp"
+        android:layout_marginEnd="50dp"
+        android:textSize="14sp"/>
+
+    <TextView
+        android:id="@+id/growthProf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="..."
+        android:textColor="@color/white"
+        android:fontFamily="@font/opensans_regular"
+        android:layout_gravity="top|end"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="50dp"
+        android:textSize="18sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Вес"
+        android:textColor="#505050"
+        android:fontFamily="@font/opensans_regular"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="180dp"
+        android:layout_marginStart="100dp"
+        android:textSize="14sp"/>
+
+    <TextView
+        android:id="@+id/weightProf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="..."
+        android:textColor="@color/white"
+        android:fontFamily="@font/opensans_regular"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="210dp"
+        android:layout_marginStart="100dp"
+        android:textSize="18sp"/>
+
+    <View
+        android:layout_width="350dp"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="70dp"/>
+
+    <Button
+        android:id="@+id/signOutBtn"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:text="Выйти из аккаунта"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="20dp"
+        android:textAlignment="textStart"
+        android:fontFamily="@font/opensans_bold"
+        android:textAllCaps="false"
+        android:paddingStart="10dp"
+        android:textColor="#FF0000"
+        android:background="@drawable/custom_button_transparent"
+        tools:ignore="RtlCompat" />
+
+    <View
+        android:layout_width="350dp"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="20dp"/>
 
 </FrameLayout>
