Update 1.1 Add develop Profile

--- a/app/src/main/res/drawable/custom_button_transparent.xml
+++ b/app/src/main/res/drawable/custom_button_transparent.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#333333">
+    android:color="#5E5E5E">
 
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="#00C464E5"></solid>
-            <corners android:radius="60dp"></corners>
+            <solid android:color="@color/dark"></solid>
         </shape>
     </item>
 </ripple>
