--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,12 +3,103 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/dark"
     tools:context=".HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:background="#2C2C2E"/>
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:orientation="horizontal" >
+
+            <Button
+                android:id="@+id/d1"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:text="Пн"
+                android:textColor="@color/white"
+                android:fontFamily="@font/opensans_regular"
+                android:background="@drawable/custom_button_days"
+                android:layout_marginStart="10dp"
+                android:textAllCaps="false"/>
+
+            <Button
+                android:id="@+id/d2"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:text="Вт"
+                android:textColor="@color/white"
+                android:fontFamily="@font/opensans_regular"
+                android:background="@drawable/custom_button_days"
+                android:layout_marginStart="10dp"
+                android:textAllCaps="false"/>
+
+            <Button
+                android:id="@+id/d3"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:text="Ср"
+                android:textColor="@color/white"
+                android:fontFamily="@font/opensans_regular"
+                android:background="@drawable/custom_button_days"
+                android:layout_marginStart="10dp"
+                android:textAllCaps="false"/>
+
+            <Button
+                android:id="@+id/d4"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:text="Чт"
+                android:textColor="@color/white"
+                android:fontFamily="@font/opensans_regular"
+                android:background="@drawable/custom_button_days"
+                android:layout_marginStart="10dp"
+                android:textAllCaps="false"/>
+
+            <Button
+                android:id="@+id/d5"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:text="Пт"
+                android:textColor="@color/white"
+                android:fontFamily="@font/opensans_regular"
+                android:background="@drawable/custom_button_days"
+                android:layout_marginStart="10dp"
+                android:textAllCaps="false"/>
+
+            <Button
+                android:id="@+id/d6"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:text="Сб"
+                android:textColor="@color/white"
+                android:fontFamily="@font/opensans_regular"
+                android:background="@drawable/custom_button_days"
+                android:layout_marginStart="10dp"
+                android:textAllCaps="false"/>
+
+            <Button
+                android:id="@+id/d7"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:text="Вс"
+                android:textColor="@color/white"
+                android:fontFamily="@font/opensans_regular"
+                android:background="@drawable/custom_button_days"
+                android:layout_marginStart="10dp"
+                android:textAllCaps="false"/>
+        </LinearLayout>
+    </HorizontalScrollView>
 </FrameLayout>
