--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="dark">#1C1C1E</color>
     <color name="gray">#515151</color>
     <color name="pink">#C464E5</color>
+    <color name="darkGray">#2C2C2E</color>
 </resources>
