--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -35,10 +35,10 @@
     <View
         android:id="@+id/view"
         android:layout_width="1dp"
-        android:layout_height="150dp"
+        android:layout_height="100dp"
         android:background="@color/gray"
         android:layout_gravity="top|center"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="70dp"/>
 
     <View
         android:layout_width="350dp"
@@ -69,5 +69,35 @@
         android:background="@color/gray"
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="19dp"/>
+
+    <View
+        android:layout_width="350dp"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="249dp"/>
+
+    <Button
+        android:id="@+id/settingsBtn"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:text="Настройки"
+        android:layout_gravity="center|top"
+        android:layout_marginTop="250dp"
+        android:textAlignment="textStart"
+        android:fontFamily="@font/opensans_bold"
+        android:textAllCaps="false"
+        android:paddingStart="10dp"
+        android:stateListAnimator="@null"
+        android:textColor="@color/white"
+        android:background="@drawable/custom_button_transparent"
+        tools:ignore="RtlCompat" />
+
+    <View
+        android:layout_width="350dp"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="300dp"/>
 
 </FrameLayout>
