--- a/app/src/main/res/layout/fragment_chek_for_home_task.xml
+++ b/app/src/main/res/layout/fragment_chek_for_home_task.xml
@@ -28,23 +28,12 @@
         android:fontFamily="@font/opensans_bold"
         android:textSize="24sp"/>
 
-    <View
-        android:id="@+id/video2"
+    <ImageView
+        android:id="@+id/imageTask2"
         android:layout_width="300dp"
         android:layout_height="170dp"
         android:layout_gravity="top|center"
-        android:layout_marginTop="150dp"
-        android:background="#3A3A3A"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|center"
-        android:layout_marginTop="220dp"
-        android:text="Видео"
-        android:textColor="#696969"
-        android:fontFamily="@font/opensans_bold"
-        android:textSize="16sp"/>
+        android:layout_marginTop="150dp" />
 
     <TextView
         android:id="@+id/tvDescTask2"
